# ecf-ml

./: .gitignore  main.py  pyproject.toml
src/data/: loading.py
src/scripts/: explore_data.py
